banner first commit

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>hi there</h1>   
+
+    <main>
+
+        <!-- banner start -->
+
+        <section class="banner-bg">
+            <div class="banner-secion">
+                <div class="banner-left">
+                    <h1>Conmebol Copa America 2021</h1>
+                    <a href="">Watch Live <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="banner-right">
+                    <img src="img/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- banner finish -->
+
+    </main>
+
+    <!-- font awesome -->
+
+    <script src="https://kit.fontawesome.com/4ceb2535de.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
