--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="banner-secion">
                 <div class="banner-left">
                     <h1>Conmebol Copa America 2021</h1>
-                    <a href="">Watch Live <i class="fas fa-arrow-right"></i></a>
+                    <a href="">Watch Live <span class="banner-arrow"><i class="fas fa-arrow-right"></i></span></i></a>
                 </div>
                 <div class="banner-right">
                     <img src="img/banner.png" alt="">
