--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
         <!-- banner start -->
 
-        <section class="banner-bg">
-            <div class="banner-secion">
+        <section class="banner-secion">
                 <div class="banner-left">
                     <h1>Conmebol Copa America 2021</h1>
                     <a href="">Watch Live <span class="banner-arrow"><i class="fas fa-arrow-right"></i></span></i></a>
@@ -24,7 +23,6 @@
                 <div class="banner-right">
                     <img src="img/banner.png" alt="">
                 </div>
-            </div>
         </section>
 
         <!-- banner finish -->
