players profile html added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,61 @@
                 </div>
         </section>
 
-        <!-- banner finish -->
+        <!-- banner end -->
+
+        <!-- players profile start -->
+
+        <section class="players-section">
+            <div class="players">
+                <article class="player">
+                    <img src="img/player-1.png" alt="">
+                    <h3>Neymar Jr</h3>
+                    <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team. He is widely regarded as one of the best players in the world.[7][8]</p>
+                </article>
+                <article class="player">
+                    <img src="img/player-2.png" alt="">
+                    <h3>Lionel Messi</h3>
+                    <p>Lionel Andrés Messi[note 1] (Spanish pronunciation: [ljoˈnel anˈdɾes ˈmesi] (About this soundlisten);[A] also known as Leo Messi,[8] (born 24 June 1987) is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team.</p>
+                </article>
+                <article class="player">
+                    <img src="img/player-3.png" alt="">
+                    <h3>Cristiano Ronaldo</h3>
+                    <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM (Portuguese pronunciation: [kɾiʃˈtjɐnu ʁɔˈnaɫdu]; born 5 February 1985) is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="player">
+                    <img src="img/player-4.png" alt="">
+                    <h3>Paulo Dybala</h3>
+                    <p>Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.Commonly referred to as "La Joya" ("The Jewel"),[4] or "U Picciriddu" ("The Kid"; mostly by Palermitans),[5] Dybala began his club career in 2011 with Instituto de Córdoba;</p>
+                </article>
+                <article class="player">
+                    <img src="img/player-5.png" alt="">
+                    <h3>Mesut Ozil</h3>
+                    <p>Mesut Özil (German pronunciation: [ˈmeːzut ˈøːzil], Turkish: [meˈsut œˈzil]; born 15 October 1988) is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King",[2][3][4][5][6][7] Özil is known for his technical skills, creativity, agility, and finesse.</p>
+                </article>
+                <article class="player">
+                    <img src="img/player-6.png" alt="">
+                    <h3>Mauro Icardi</h3>
+                    <p>Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
+                </article>
+                <article class="player">
+                    <img src="img/player-7.png" alt="">
+                    <h3>Di María</h3>
+                    <p>Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger or attacking midfielder.</p>
+                </article>
+                <article class="player">
+                    <img src="img/player-8.png" alt="">
+                    <h3>Kylian Mbappé</h3>
+                    <p>Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.Mbappé began his senior career with Ligue 1 club Monaco, making his professional debut in 2015, aged 16.</p>
+                </article>
+                <article class="player">
+                    <img src="img/player-9.png" alt="">
+                    <h3>Mohamed Salah</h3>
+                    <p>Mohamed Salah Hamed Mahrous Ghaly (Arabic: محمد صلاح حامد محروس غالى‎, Egyptian Arabic pronunciation: [mæˈħam.mæd sˤɑˈlɑːħ ˈɣæːli];</p>
+                </article>
+            </div>
+        </section>
+
+        <!-- players profile end -->
 
     </main>
 
