--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="banner-secion">
                 <div class="banner-left">
                     <h1>Conmebol Copa America 2021</h1>
-                    <a href="">Watch Live <span class="banner-arrow"><i class="fas fa-arrow-right"></i></span></i></a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=-2vGHcCuzdc">Watch Live <span class="banner-arrow"><i class="fas fa-arrow-right"></i></span></i></a>
                 </div>
                 <div class="banner-right">
                     <img src="img/banner.png" alt="">
@@ -81,6 +81,27 @@
         </section>
 
         <!-- players profile end -->
+
+        <!-- footer start -->
+
+        <footer class="footer-section">
+            <div class="footer-content">
+                <div class="footer-top">
+                    <img src="img/Logo.png" alt="">
+                </div>
+                <div class="footer-icons">
+                    <a href=""><i class="fab fa-youtube"></i></a>
+                    <a href=""><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fab fa-facebook-square"></i></a>
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                </div>
+                <div class="footer-bottom">
+                    <p>Copyright &copy; 2022 football</p>  
+                </div>
+            </div>
+        </footer>
+
+        <!-- footer end -->
 
     </main>
 
