plyers profile another row added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
                     <h3>Mohamed Salah</h3>
                     <p>Mohamed Salah Hamed Mahrous Ghaly (Arabic: محمد صلاح حامد محروس غالى‎, Egyptian Arabic pronunciation: [mæˈħam.mæd sˤɑˈlɑːħ ˈɣæːli];</p>
                 </article>
+                <article class="player">
+                    <img src="img/player-10.png" alt="">
+                    <h3>Harry Kane</h3>
+                    <p>Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.</p>
+                </article>
+                <article class="player">
+                    <img src="img/player-11.png" alt="">
+                    <h3>Kevin De Bruyne</h3>
+                    <p>Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
+                </article>
+                <article class="player">
+                    <img src="img/player-12.png" alt="">
+                    <h3>Philippe Coutinho</h3>
+                    <p>Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an attacking midfielder</p>
+                </article>
             </div>
         </section>
 
