--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <section class="banner-secion">
                 <div class="banner-left">
                     <h1>Conmebol Copa America 2021</h1>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=-2vGHcCuzdc">Watch Live <span class="banner-arrow"><i class="fas fa-arrow-right"></i></span></i></a>
+                    <div class="banner-left-link">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=-2vGHcCuzdc">Watch Live <span class="banner-arrow"><i class="fas fa-arrow-right"></i></span></i></a>
+                    </div>
                 </div>
                 <div class="banner-right">
                     <img src="img/banner.png" alt="">
