--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
         <!-- banner start -->
 
-        <section class="banner-secion">
+        <section>
+            <div class="banner-secion">
                 <div class="banner-left">
                     <h1>Conmebol Copa America 2021</h1>
                         <a target="_blank" href="https://www.youtube.com/watch?v=-2vGHcCuzdc">Watch Live <span class="banner-arrow"><i class="fas fa-arrow-right"></i></span></i></a>
@@ -24,6 +25,7 @@
                 <div class="banner-right">
                     <img src="img/banner.png" alt="">
                 </div>
+            </div>
         </section>
 
         <!-- banner end -->
