footer modified for mobile

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
 
         <!-- players profile end -->
 
+        <section>
+            .
+        </section>
+
         <!-- footer start -->
 
         <footer>
