--- a/index.html
+++ b/index.html
@@ -101,9 +101,47 @@
 
         <!-- players profile end -->
 
+        <!-- feature start -->
+
         <section>
-            .
+            <div class="feature-section">
+                <aside class="latest-news">
+                    <h2>Latest News</h2>
+                    <div class="news">
+                        <div class="news-image">
+                            <img src="img/news-1.jpg" alt="">
+                        </div>
+                        <div class="news-details">
+                            <h4>Lionel Messi, Argentina win Copa America over Brazil</h4>
+                            <p>Argentina won their first major title in 28 years on Saturday when an Angel Di Maria goal gave them</p>
+                        </div>
+                    </div>
+                    <hr>
+                    
+                    <div class="news">
+                        <div class="news-image">
+                            <img src="img/news-2.jpg" alt="">
+                        </div>
+                        <div class="news-details">
+                            <h4>Arsenal lose friendly to Hibernian after Arthur Okonkwo's error in goal</h4>
+                            <p>Nicolas Pepe missed a second-half penalty as Arsenal kicked</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="news">
+                        <div class="news-image">
+                            <img src="img/news-3.jpg" alt="">
+                        </div>
+                        <div class="news-details">
+                            <h4>ADVERTISEMENT Conservative MP Steve Baker urges party to back players taking the knee</h4>
+                            <p>Argentina won their first major title in 28 years on Saturday when an Angel Di Maria goal</p>
+                        </div>
+                    </div>
+                </aside>
+            </div>
         </section>
+
+        <!-- feature end -->
 
         <!-- footer start -->
 
