feature part added and modified

--- a/index.html
+++ b/index.html
@@ -138,6 +138,17 @@
                         </div>
                     </div>
                 </aside>
+                <section>
+                    <div class="feature-videos">
+                        <h2>Latest Highlights</h2>
+                        <div class="video">
+                            <video src="media/videos/video-1.mp4" controls width="300px"></video>
+                        </div>
+                        <div class="video">
+                            <video src="media/videos/video-2.mp4" controls width="300px"></video>
+                        </div>
+                    </div>
+                </section>
             </div>
         </section>
 
