--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
                         </div>
                     </div>
                 </aside>
-                <section>
                     <div class="feature-videos">
                         <h2>Latest Highlights</h2>
                         <div class="video">
@@ -148,11 +147,90 @@
                             <video src="media/videos/video-2.mp4" controls width="300px"></video>
                         </div>
                     </div>
-                </section>
             </div>
         </section>
 
         <!-- feature end -->
+
+        <section>
+
+            <!-- table-schedule start -->
+
+            <div class="table-schedule-part">
+                <div class="table-section">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>No</th>
+                                <th>Country</th>
+                                <th>point</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Argentina</td>
+                                <td>500</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Brazil</td>
+                                <td>490</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Italy</td>
+                                <td>480</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Portugal</td>
+                                <td>470</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>England</td>
+                                <td>460</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="schedule-section">
+                    <div class="schedule">
+                        <div class="schedule-img">
+                            <img src="img/schedule-1.jpg" alt="">
+                        </div>
+                        <div class="schedule-details">
+                            <h4>08-08-2021</h4>
+                            <h3>Brazil vs Argentina</h3>
+                            <p>Vanue- Brazil</p>
+                        </div>
+                    </div>
+                    <div class="schedule">
+                        <div class="schedule-img">
+                            <img src="img/schedule-2.jpg" alt="">
+                        </div>
+                        <div class="schedule-details">
+                            <h4>10-08-2021</h4>
+                            <h3>England vs Brazil</h3>
+                            <p>Vanue- England</p>
+                        </div>
+                    </div>
+                    <div class="schedule">
+                        <div class="schedule-img">
+                            <img src="img/schedule-3.jpg" alt="">
+                        </div>
+                        <div class="schedule-details">
+                            <h4>15-08-2021</h4>
+                            <h3>Japan vs Italy</h3>
+                            <p>Vanue- Japan</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- table-schedule end -->
+
+        </section>
 
         <!-- footer start -->
 
