--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <section>
             <div class="feature-section">
-                <aside class="latest-news">
+                <div class="latest-news">
                     <h2>Latest News</h2>
                     <div class="news">
                         <div class="news-image">
@@ -137,16 +137,16 @@
                             <p>Argentina won their first major title in 28 years on Saturday when an Angel Di Maria goal</p>
                         </div>
                     </div>
-                </aside>
-                    <div class="feature-videos">
+                </div>
+                <div class="feature-videos">
                         <h2>Latest Highlights</h2>
-                        <div class="video">
-                            <video src="media/videos/video-1.mp4" controls width="300px"></video>
-                        </div>
-                        <div class="video">
-                            <video src="media/videos/video-2.mp4" controls width="300px"></video>
-                        </div>
-                    </div>
+                            <div class="video">
+                                <video src="media/videos/video-1.mp4" controls width="300px"></video>
+                            </div>
+                            <div class="video">
+                                <video src="media/videos/video-2.mp4" controls width="300px"></video>
+                            </div>
+                </div>
             </div>
         </section>
 
