--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <h2>Latest News</h2>
                     <div class="news">
                         <div class="news-image">
-                            <img src="img/news-1.jpg" alt="">
+                            <img src="img/news-1.png" alt="">
                         </div>
                         <div class="news-details">
                             <h4>Lionel Messi, Argentina win Copa America over Brazil</h4>
@@ -120,7 +120,7 @@
                     
                     <div class="news">
                         <div class="news-image">
-                            <img src="img/news-2.jpg" alt="">
+                            <img src="img/news-2.png" alt="">
                         </div>
                         <div class="news-details">
                             <h4>Arsenal lose friendly to Hibernian after Arthur Okonkwo's error in goal</h4>
@@ -130,7 +130,7 @@
                     <hr>
                     <div class="news">
                         <div class="news-image">
-                            <img src="img/news-3.jpg" alt="">
+                            <img src="img/news-3.png" alt="">
                         </div>
                         <div class="news-details">
                             <h4>ADVERTISEMENT Conservative MP Steve Baker urges party to back players taking the knee</h4>
