--- a/index.html
+++ b/index.html
@@ -101,47 +101,31 @@
 
         <!-- players profile end -->
 
-        <!-- feature start -->
+        <!-- news start -->
 
         <section>
-            <div class="feature-section">
-                <div class="latest-news">
-                    <h2>Latest News</h2>
+            <div class="news-section">
+                <div class="news-content">
                     <div class="news">
-                        <div class="news-image">
-                            <img src="img/news-1.png" alt="">
-                        </div>
-                        <div class="news-details">
-                            <h4>Lionel Messi, Argentina win Copa America over Brazil</h4>
-                            <p>Argentina won their first major title in 28 years on Saturday when an Angel Di Maria goal gave them</p>
-                        </div>
+                        <img src="img/news-1.png" alt="">
+                        <h2>Argentina won over Brazil</h2>
+                        <p>Argentina won their first major title in 28 years when an Angel Di Maria goal gave them a 1-0</p>
                     </div>
-                    <hr>
-                    
                     <div class="news">
-                        <div class="news-image">
-                            <img src="img/news-2.png" alt="">
-                        </div>
-                        <div class="news-details">
-                            <h4>Arsenal lose friendly to Hibernian after Arthur Okonkwo's error in goal</h4>
-                            <p>Nicolas Pepe missed a second-half penalty as Arsenal kicked</p>
-                        </div>
+                        <img src="img/news-2.png" alt="">
+                        <h2>Argentina won over Brazil</h2>
+                        <p>Argentina won their first major title in 28 years when an Angel Di Maria goal gave them a 1-0</p>
                     </div>
-                    <hr>
                     <div class="news">
-                        <div class="news-image">
-                            <img src="img/news-3.png" alt="">
-                        </div>
-                        <div class="news-details">
-                            <h4>ADVERTISEMENT Conservative MP Steve Baker urges party to back players taking the knee</h4>
-                            <p>Argentina won their first major title in 28 years on Saturday when an Angel Di Maria goal</p>
-                        </div>
+                        <img src="img/news-3.png" alt="">
+                        <h2>Argentina won over Brazil</h2>
+                        <p>Argentina won their first major title in 28 years when an Angel Di Maria goal gave them a 1-0</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- feature end -->
+        <!-- news end -->
 
             <!-- table-schedule start -->
 
