--- a/index.html
+++ b/index.html
@@ -127,85 +127,31 @@
 
         <!-- news end -->
 
-            <!-- table-schedule start -->
+        <!-- schedule start -->
+        
+        <section>
+            <div class="schedule-section">
+                <div class="schedule-content">
+                    <div class="schedule">
+                        <img src="img/news-1.png" alt="">
+                        <h2>Argentina vs Brazil</h2>
+                        <p>12 August 2021</p>
+                    </div>
+                    <div class="schedule">
+                        <img src="img/news-2.png" alt="">
+                        <h2>Argentina vs England</h2>
+                        <p>15 August 2021</p>
+                    </div>
+                    <div class="schedule">
+                        <img src="img/news-3.png" alt="">
+                        <h2>Argentina vs Brazil</h2>
+                        <p>20 August 2021</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-<section class="table-schedule-bg">
-    <h1>Point Table and Upcoming Schedules</h1>
-    <div class="table-schedule-part">
-        <div class="table-section">
-            <table>
-                <thead>
-                    <tr>
-                        <th>No</th>
-                        <th>Country</th>
-                        <th>point</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Argentina</td>
-                        <td>500</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Brazil</td>
-                        <td>490</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Italy</td>
-                        <td>480</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Portugal</td>
-                        <td>470</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>England</td>
-                        <td>460</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>        
-        <div class="schedule-section">
-            <div class="schedule">
-                <div class="schedule-img">
-                    <img src="img/schedule-1.jpg" alt="">
-                </div>
-                <div class="schedule-details">
-                    <h4>08-08-2021</h4>
-                    <h3>Brazil vs Argentina</h3>
-                    <p>Vanue- Brazil</p>
-                </div>
-            </div>
-            <div class="schedule">
-                <div class="schedule-img">
-                    <img src="img/schedule-2.jpg" alt="">
-                </div>
-                <div class="schedule-details">
-                    <h4>10-08-2021</h4>
-                    <h3>England vs Brazil</h3>
-                    <p>Vanue- England</p>
-                </div>
-            </div>
-            <div class="schedule">
-                <div class="schedule-img">
-                    <img src="img/schedule-3.jpg" alt="">
-                </div>
-                <div class="schedule-details">
-                    <h4>15-08-2021</h4>
-                    <h3>Japan vs Italy</h3>
-                    <p>Vanue- Japan</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-            
-            <!-- table-schedule end -->
+        <!-- schedule end -->
 
         <!-- footer start -->
 
