news and schedule section padding added

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="schedule-content">
                     <div class="schedule">
                         <img src="img/news-1.png" alt="">
-                        <h2>Argentina vs Brazil</h2>
+                        <h2>Brazil vs  Argentina</h2>
                         <p>12 August 2021</p>
                     </div>
                     <div class="schedule">
@@ -144,7 +144,7 @@
                     </div>
                     <div class="schedule">
                         <img src="img/news-3.png" alt="">
-                        <h2>Argentina vs Brazil</h2>
+                        <h2>Portugal vs Brazil</h2>
                         <p>20 August 2021</p>
                     </div>
                 </div>
