banner button solved

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 <div class="news-content">
                     <div class="news">
                         <img src="img/news-1.png" alt="">
-                        <h2>Argentina won over Brazil</h2>
-                        <p>Argentina won their first major title in 28 years when an Angel Di Maria goal gave them a 1-0</p>
+                        <h2>Neymar breaks down in tears</h2>
+                        <p>Neymar breaks down in tears after failing to lead Brazil to Copa America win over Argentina</p>
                     </div>
                     <div class="news">
                         <img src="img/news-2.png" alt="">
@@ -118,8 +118,8 @@
                     </div>
                     <div class="news">
                         <img src="img/news-3.png" alt="">
-                        <h2>Argentina won over Brazil</h2>
-                        <p>Argentina won their first major title in 28 years when an Angel Di Maria goal gave them a 1-0</p>
+                        <h2>Cristiano Ronaldo wins Golden Boot</h2>
+                        <p>Portugal captain and modern-day great Cristiano Ronaldo won the Euro 2020 Golden Boot after finishing as the top-scorer</p>
                     </div>
                 </div>
             </div>
