--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- banner start -->
 
         <section>
-            <div class="banner-secion">
+            <div class="banner-section">
                 <div class="banner-left">
                     <h1>Conmebol Copa America 2021</h1>
                         <a target="_blank" href="https://www.youtube.com/watch?v=-2vGHcCuzdc">Watch Live <span class="banner-arrow"><i class="fas fa-arrow-right"></i></span></i></a>
@@ -118,8 +118,8 @@
                     </div>
                     <div class="news">
                         <img src="img/news-3.png" alt="">
-                        <h2>Cristiano Ronaldo wins Golden Boot</h2>
-                        <p>Portugal captain and modern-day great Cristiano Ronaldo won the Euro 2020 Golden Boot after finishing as the top-scorer</p>
+                        <h2>Argentina won over Brazil</h2>
+                        <p>Argentina won their first major title in 28 years when an Angel Di Maria goal gave them a 1-0</p>
                     </div>
                 </div>
             </div>
