--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 
         <!-- banner start -->
 
-        <section>
+        <section class="banner-bg">
             <div class="banner-section">
                 <div class="banner-left">
                     <h1>Conmebol Copa America 2021</h1>
-                        <a target="_blank" href="https://www.youtube.com/watch?v=-2vGHcCuzdc">Watch Live <span class="banner-arrow"><i class="fas fa-arrow-right"></i></span></i></a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=-2vGHcCuzdc">Watch Live <i
+                            class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="banner-right">
                     <img src="img/banner.png" alt="">
@@ -38,65 +39,82 @@
                     <article class="player">
                         <img src="img/player-1.png" alt="">
                         <h3>Neymar Jr</h3>
-                        <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
+                        <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
+                            professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the
+                            Brazil national team.</p>
                     </article>
                     <article class="player">
                         <img src="img/player-2.png" alt="">
                         <h3>Lionel Messi</h3>
-                        <p>Lionel Andrés Messi[note 1] (Spanish pronunciation: [ljoˈnel anˈdɾes ˈmesi] (About this soundlisten);[A] also known as Leo Messi</p>
+                        <p>Lionel Andrés Messi[note 1] (Spanish pronunciation: [ljoˈnel anˈdɾes ˈmesi] (About this
+                            soundlisten);[A] also known as Leo Messi</p>
                     </article>
                     <article class="player">
                         <img src="img/player-3.png" alt="">
                         <h3>Cristiano Ronaldo</h3>
-                        <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM (Portuguese pronunciation: [kɾiʃˈtjɐnu ʁɔˈnaɫdu];</p>
+                        <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM (Portuguese pronunciation: [kɾiʃˈtjɐnu
+                            ʁɔˈnaɫdu];</p>
                     </article>
                     <article class="player">
                         <img src="img/player-4.png" alt="">
                         <h3>Paulo Dybala</h3>
-                        <p>Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
+                        <p>Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who
+                            plays as a forward for Serie A club Juventus and the Argentina national team.</p>
                     </article>
                     <article class="player">
                         <img src="img/player-5.png" alt="">
                         <h3>Mesut Ozil</h3>
-                        <p>Mesut Özil (German pronunciation: [ˈmeːzut ˈøːzil], Turkish: [meˈsut œˈzil]; born 15 October 1988) is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe.</p>
+                        <p>Mesut Özil (German pronunciation: [ˈmeːzut ˈøːzil], Turkish: [meˈsut œˈzil]; born 15 October
+                            1988) is a German professional footballer who plays as an attacking midfielder for Süper Lig
+                            club Fenerbahçe.</p>
                     </article>
                     <article class="player">
                         <img src="img/player-6.png" alt="">
                         <h3>Mauro Icardi</h3>
-                        <p>Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain.</p>
+                        <p>Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February
+                            1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris
+                            Saint-Germain.</p>
                     </article>
                     <article class="player">
                         <img src="img/player-7.png" alt="">
                         <h3>Di María</h3>
-                        <p>Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
+                        <p>Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer who
+                            plays for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
                     </article>
                     <article class="player">
                         <img src="img/player-8.png" alt="">
                         <h3>Kylian Mbappé</h3>
-                        <p>Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
+                        <p>Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as
+                            a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
                     </article>
                     <article class="player">
                         <img src="img/player-9.png" alt="">
                         <h3>Mohamed Salah</h3>
-                        <p>Mohamed Salah Hamed Mahrous Ghaly (Arabic: محمد صلاح حامد محروس غالى‎, Egyptian Arabic pronunciation: [mæˈħam.mæd sˤɑˈlɑːħ ˈɣæːli];</p>
+                        <p>Mohamed Salah Hamed Mahrous Ghaly (Arabic: محمد صلاح حامد محروس غالى‎, Egyptian Arabic
+                            pronunciation: [mæˈħam.mæd sˤɑˈlɑːħ ˈɣæːli];</p>
                     </article>
                     <article class="player">
                         <img src="img/player-10.png" alt="">
                         <h3>Harry Kane</h3>
-                        <p>Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.</p>
+                        <p>Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as
+                            a striker for Premier League club Tottenham Hotspur and captains the England national team.
+                        </p>
                     </article>
                     <article class="player">
                         <img src="img/player-11.png" alt="">
                         <h3>Kevin De Bruyne</h3>
-                        <p>Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
+                        <p>Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a
+                            midfielder for Premier League club Manchester City, where he is vice-captain, and the
+                            Belgium national team.</p>
                     </article>
                     <article class="player">
                         <img src="img/player-12.png" alt="">
                         <h3>Philippe Coutinho</h3>
-                        <p>Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an attacking midfielder</p>
+                        <p>Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who
+                            plays as an attacking midfielder</p>
                     </article>
+
                 </div>
-            </div>
         </section>
 
         <!-- players profile end -->
@@ -105,21 +123,25 @@
 
         <section>
             <div class="news-section">
+                <h1>News</h1>
                 <div class="news-content">
                     <div class="news">
                         <img src="img/news-1.png" alt="">
                         <h2>Neymar breaks down in tears</h2>
-                        <p>Neymar breaks down in tears after failing to lead Brazil to Copa America win over Argentina</p>
+                        <p>Neymar breaks down in tears after failing to lead Brazil to Copa America win over Argentina
+                        </p>
                     </div>
                     <div class="news">
                         <img src="img/news-2.png" alt="">
                         <h2>Argentina won over Brazil</h2>
-                        <p>Argentina won their first major title in 28 years when an Angel Di Maria goal gave them a 1-0</p>
+                        <p>Argentina won their first major title in 28 years when an Angel Di Maria goal gave them a 1-0
+                        </p>
                     </div>
                     <div class="news">
                         <img src="img/news-3.png" alt="">
                         <h2>Argentina won over Brazil</h2>
-                        <p>Argentina won their first major title in 28 years when an Angel Di Maria goal gave them a 1-0</p>
+                        <p>Argentina won their first major title in 28 years when an Angel Di Maria goal gave them a 1-0
+                        </p>
                     </div>
                 </div>
             </div>
@@ -128,13 +150,14 @@
         <!-- news end -->
 
         <!-- schedule start -->
-        
+
         <section>
             <div class="schedule-section">
+                <h1>Schedule</h1>
                 <div class="schedule-content">
                     <div class="schedule">
                         <img src="img/news-1.png" alt="">
-                        <h2>Brazil vs  Argentina</h2>
+                        <h2>Brazil vs Argentina</h2>
                         <p>12 August 2021</p>
                     </div>
                     <div class="schedule">
@@ -168,7 +191,7 @@
                         <a href=""><i class="fab fa-instagram"></i></a>
                     </div>
                     <div class="footer-bottom">
-                        <p>Copyright &copy; 2022 football</p>  
+                        <p>Copyright &copy; 2022 football</p>
                     </div>
                 </div>
             </div>
@@ -183,4 +206,5 @@
     <script src="https://kit.fontawesome.com/4ceb2535de.js" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
